@@ -25,10 +25,11 @@ node.label.arrow = 0.01, node.label.force = 1, node.shape = 19,
 node.shape.title = NULL, node.xcoord = NULL, node.ycoord = NULL,
 node.color = NULL, node.color.title = NULL,
 colormap = "grey-orange-darkred", ncolors = 64, zlim = NULL,
-na.color = "grey80", node.size = NULL, node.size.title = NULL,
-node.size.range = c(1, 4), slim = NULL, title = "",
-edge.size = 0.5, edge.color = "black", edge.color.alpha = 0.5,
-edge.curve = 0.1, edge.arrow = 2, edge.arrow.gap = 0.02)
+na.color = "grey80", node.color.alpha = 1, node.size = NULL,
+node.size.title = NULL, node.size.range = c(1, 4), slim = NULL,
+title = "", edge.size = 0.5, edge.color = "black",
+edge.color.alpha = 0.5, edge.curve = 0.1, edge.arrow = 2,
+edge.arrow.gap = 0.02)
 </pre>
 
 
@@ -148,6 +149,11 @@ plotted</p>
 <tr valign="top"><td><code>na.color</code></td>
 <td>
 <p>the color for NAs. By default, it is 'grey80'</p>
+</td></tr>
+<tr valign="top"><td><code>node.color.alpha</code></td>
+<td>
+<p>the 0-1 value specifying transparency of node
+colors</p>
 </td></tr>
 <tr valign="top"><td><code>node.size</code></td>
 <td>
