@@ -37,8 +37,7 @@ xLayout(g, layout = c("layout_nicely", "layout_randomly",
 <table summary="R argblock">
 <tr valign="top"><td><code>g</code></td>
 <td>
-<p>an object of class &quot;igraph&quot; (or &quot;graphNEL&quot;) for a graph with
-such as a 'community' node attribute</p>
+<p>an object of class &quot;igraph&quot; (or &quot;graphNEL&quot;) for a graph</p>
 </td></tr>
 <tr valign="top"><td><code>layout</code></td>
 <td>
