@@ -142,6 +142,45 @@ merge=T, cutHeight=0.2, verbose=T)
 head(cModule$modules)
 cModule$io
 
+# Enrichment analysis of modular genes: using REACTOME pathways
+ls_modules &lt;- split(x=cModule$modules$nodes, f=cModule$modules$modules)
+ls_eTerm &lt;- xEnricherGenesAdv(ls_modules,
+background=cModule$modules$nodes, ontologies=c("REACTOME"),
+size.range=c(10,500), test="fisher", min.overlap=5, p.tail="one-tail",
+RData.location=RData.location, plot=T, fdr.cutoff=0.05,
+displayBy="zscore")
+gp &lt;- xEnrichForest(ls_eTerm, top_num='auto', CI.one=F,
+FDR.cutoff=0.05, signature=F, drop=T, colormap="yellow-red")
+
+# Network analysis of modular genes: intramodular genes in an interaction network
+# 1) define netowrk to visualise
+g &lt;- xDefineNet(network="STRING_high",
+STRING.only=c("experimental_score","database_score"),
+RData.location=RData.location)
+# 2) genes/nodes in module 1
+nodes_query &lt;- (cModule$modules %&gt;% dplyr::filter(modules==2))$nodes
+# 3) connectivity of intramodular genes in the interaction network
+ig &lt;- dnet::dNetInduce(g, nodes_query=nodes_query, knn=0,
+largest.comp=F)
+# 4) visualisation
+ig &lt;- xLayout(ig, layout="gplot.layout.fruchtermanreingold")
+gp &lt;- xGGnetwork(ig, node.xcoord="xcoord", node.ycoord="ycoord",
+node.color.alpha=0.5, edge.color.alpha=0.2)
+## also size by degree
+V(ig)$degree &lt;- igraph::degree(ig)
+gp &lt;- xGGnetwork(ig, node.xcoord="xcoord", node.ycoord="ycoord",
+node.color.alpha=0.5, edge.color.alpha=0.2, node.size="degree",
+node.size.range=c(1,5))
+## also label by intramodule hub genes (top 10)
+ind &lt;- match(V(ig)$name,cModule$modules$nodes)
+V(ig)$rank &lt;- cModule$modules$rank[ind]
+V(ig)$label &lt;- ''
+V(ig)$label[V(ig)$rank&lt;=10] &lt;- V(ig)$name[V(ig)$rank&lt;=10]
+gp &lt;- xGGnetwork(ig, node.xcoord="xcoord", node.ycoord="ycoord",
+node.color.alpha=0.5, edge.color.alpha=0.2, node.size="degree",
+node.size.range=c(1,5), node.label="label", node.label.size=2,
+node.label.force=0.01)
+
 ## End(Not run)
 </pre>
 
